- some more modernization changes